spacing fixed between the sections

--- a/src/internshipFair/InternshipFair.css
+++ b/src/internshipFair/InternshipFair.css
@@ -30,11 +30,6 @@
   justify-content: left;
 }
 
-/* .heroFairButton:hover::after {
-  content: " \279C";
-  transition: all 2s ease;
-} */
-
 .fairCount {
   background-color: #187271;
   font-family: "Poppins", sans-serif;
@@ -97,7 +92,9 @@
   grid-column: 4 / -1;
   grid-row: 1;
 }
-
+.AbtFair{
+  padding-top: 150px;
+}
 .image-stack__item--top {
   grid-row: 1;
   grid-column: 1 / span 8;
@@ -134,9 +131,6 @@
 .address {
   display: flex;
   flex-direction: row;
-  /* align-items: center;
-  justify-content: center;
-  text-align: left; */
   padding: 0 0 2% 10%;
 }
 
@@ -401,5 +395,8 @@
     font-size: 15px;
     line-height: 20px;
     padding-top: 10px;
+  }
+  .AbtFair{
+    padding-top: 0px;
   }
 }
